--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "axios": "^0.18.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
+        "jquery": "^3.4.1",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
@@ -29,6 +29,9 @@
         "@material-ui/icons": "^3.0.2",
         "@material-ui/styles": "^3.0.0-alpha.10",
         "await": "^0.2.6",
-        "react-router-dom": "^5.0.0"
+        "react-responsive-carousel": "^3.1.49",
+        "react-router-dom": "^5.0.0",
+        "react-simple-image-slider": "^1.0.2",
+        "react-slideshow-image": "^1.1.8"
     }
 }
